--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,33 @@ margin: 50px auto;
     background-color: rgb(87, 145, 0);
 }
 
+/* footer */
+
+footer{
+    width: 100%;
+    padding: 20px 0;
+    background-color: rgb(0, 65, 0) ;
+}
+
+footer .container{
+    width: 80%;
+    margin: auto;
+}
+footer .container h2{
+    font-weight: 700;
+    font-size: 20px;
+    cursor: pointer;
+    color: #fff
+}
+
+footer .container h2{
+    color: #fff
+}
+
+footer .container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
 
 @media  screen and (max-width: 768px) {
     .navbar .container{
